fix(Select): tabs overflow, close #837

--- a/components/select/index.styl
+++ b/components/select/index.styl
@@ -214,6 +214,7 @@
         height $select-card-group-height
         .k-tabs
             border none
+            overflow auto
         .k-groups
             flex 1
             overflow auto
